# algoTrading

./: .gitignore  README.md  meson.build
config/database/: database_config.json  database_schema.json
database/src/: database_configdata.cpp  database_configdata.h  database_main.cpp  database_scheduler.cpp  database_scheduler.h  meson.build
lib/: meson.build
lib/src/: meson.build
lib/src/backtest/: backtest.cpp  backtest.h  backtest_store.cpp  meson.build
lib/src/config_handler/: config_handler.h
lib/src/data/: data_types.cpp  data_types.h
lib/src/logger/: logger.h
lib/src/portfolio/: portfolio.cpp  portfolio.h
lib/src/scheduler/: scheduler.h
lib/src/strategy/: meson.build  strategy.h  strategy_high_breakout.h
